--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html>
 	<head>
 		<title>Social HW</title>
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+		<meta content="utf-8" http-equiv="encoding">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	</head>
 	<body>
 		<div class="container">
 			<h1>Social HW</h1>
+
+
+			<div class="jumbotron" style="padding-top: 1em">
+				<h3>[CS][370][Confer] First Homework</h3>
+				<img class="img-fluid" 
+					 src="image1.jpeg">
+			</div>
 		</div>
 
 
