--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<div class="container">
 			<h1>Social HW</h1>
 
 
-			<div class="jumbotron" style="padding-top: 1em">
+			<div class="jumbotron post">
 				<h3>[CS][370][Confer] First Homework</h3>
-				<img class="img-fluid" 
-					 src="image1.jpeg">
+				<div class="preview">
+					<img class="img-fluid" 
+					 	 src="image1.jpeg">
+				</div>
 			</div>
 		</div>
 
