--- a/index.html
+++ b/index.html
@@ -9,15 +9,24 @@
 	</head>
 	<body>
 		<div class="container">
-			<h1>Social HW</h1>
+			<div class="header">
+				<h1>Social HW</h1>
 
+				<span id="account-prompt"><a href="#">Login</a> or <a href="#">Register</a></span>
+			</div>
 
-			<div class="jumbotron post">
-				<h3>[CS][370][Confer] First Homework</h3>
-				<div class="preview">
-					<img class="img-fluid" 
-					 	 src="image1.jpeg">
+			<div class="row">
+				<div class="col-9">
+					<div class="jumbotron post">
+						<h3>[CS][370][Confer] First Homework</h3>
+						<div class="preview">
+							<img class="img-fluid" 
+							 	 src="image1.jpeg">
+						</div>
+					</div>
 				</div>
+
+				<div class="col-3">Sidebar</div>
 			</div>
 		</div>
 
