Added basic tags to the sidebar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
 					</div>
 				</div>
 
-				<div class="col-3">Sidebar</div>
+				<div class="col-3">
+					<ul class="list-unstyled">
+						<!-- Subfile system -->
+
+						<li><a href="#">[CS]</a></li>
+						<li><a href="#">[370]</a></li>
+						<li><a href="#">[Confer]</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 
