Replaced sidebar with subfolder system for tags

--- a/index.html
+++ b/index.html
@@ -27,13 +27,27 @@
 				</div>
 
 				<div class="col-3">
-					<ul class="list-unstyled">
-						<!-- Subfile system -->
+					<!-- Subfile system -->
+					<details>
+						<summary>[CS]</summary>
+						<details>
+							<summary>[370]</summary>
+							<a href="#">[Confer]</a>
+						</details>
+
+						<details>
+							<summary>[240]</summary>
+							<a href="#">[Sarner]</a>
+						</details>
+					</details>
+
+
+					<!-- <ul class="list-unstyled">
 
 						<li><a href="#">[CS]</a></li>
 						<li><a href="#">[370]</a></li>
 						<li><a href="#">[Confer]</a></li>
-					</ul>
+					</ul> -->
 				</div>
 			</div>
 		</div>
