Changed links to work inside of WebServerDemo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="header">
 				<h1>Social HW</h1>
 
-				<span id="account-prompt"><a href="#">Login</a> or <a href="#">Register</a></span>
+				<span id="account-prompt"><a href="/SocialHWLogin/index.html">Login</a> or <a href="/SocialHWLogin/index.html">Register</a></span>
 			</div>
 
 			<div class="row">
